--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,17 @@
 IF(BIICODE)
 	ADD_BIICODE_TARGETS()
-
-	add_definitions( -DFREEGLUT_EXPORTS -DFREEGLUT_STATIC -D_CRT_SECURE_NO_WARNINGS )
-
-	if(APPLE)
-		include_directories( /usr/X11/include )
-	endif(APPLE)
-
 	IF (UNIX)
-     	IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Box2D/Testbed")
-  			add_definitions( -D__unix__ -DHAVE_FCNTL_H -DHAVE_GETTIMEOFDAY )
-        	TARGET_LINK_LIBRARIES(${BII_BLOCK_TARGET} INTERFACE pthread X11)
-        	find_package(OpenGL REQUIRED)
-    	ENDIF()
+	     	IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Box2D/Testbed")
+			find_package(X11 REQUIRED)        		
+			if(APPLE)
+				FIND_LIBRARY(GLUT_LIBRARY GLUT)
+			        FIND_LIBRARY(OpenGL_LIBRARY OpenGL)
+            			TARGET_LINK_LIBRARIES(${BII_BLOCK_TARGET} INTERFACE ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${X11_LIBRARY_DIR})
+			else()
+  				add_definitions( -D__unix__ -DHAVE_FCNTL_H -DHAVE_GETTIMEOFDAY )
+	        		TARGET_LINK_LIBRARIES(${BII_BLOCK_TARGET} INTERFACE pthread X11)
+			endif()    	
+		ENDIF()
   	ENDIF(UNIX)
 	RETURN()
 ENDIF(BIICODE)
