biicode complete support

--- a/biicode.conf
+++ b/biicode.conf
@@ -1,2 +1,8 @@
+[requirements]
+    sbaker/freeglut: 11
+
 [paths]
     /Box2D
+
+[includes]
+    GL/freeglut.h: sbaker/freeglut/freeglut/freeglut/include
